--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animated-weather": "^4.0.1",
+    "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
