--- a/package.json
+++ b/package.json
@@ -26,6 +26,17 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js",
+      "!src/services/**.js"
+    ],
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "canvas": "^2.7.0"
   }
 }
